# scout

./: .env.example  .gitignore  README.md  ai_sdk_stream.py  graph.py  llm.py  main.py  pyproject.toml  startup_graph.py  tools.py
frontend/: .env.example  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/components/: agent-timeline.tsx  founder-brief-form.tsx  idea-composer.tsx  live-pulse.tsx  live-research.tsx  report-panel.tsx  report-table-of-contents.tsx  report-toolbar.tsx  research-activity.tsx  score-breakdown.tsx  scout-logo.tsx  search-activity-panel.tsx  status-bar.tsx
frontend/components/ui/: alert-dialog.tsx  tabs.tsx
frontend/hooks/: use-startup-stream.ts
frontend/lib/: agent-meta.ts  markdown-headings.ts  startup-form.ts  types.ts
scripts/: stream_startup_test.py
tests/: test_startup_endpoint.py
