[project]
name = "multi-agent-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-groq>=1.1.3",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
